add viewport meta tag for mobile, adjust rate, use clearRect

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="application/javascript" src="./scripts/moment.js"></script>
     <script type="application/javascript" src="./scripts/zepto.js"></script>
     <script type="application/javascript" src="./scripts/index.js"></script>
