--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="application/javascript" src="./scripts/moment.js"></script>
     <script type="application/javascript" src="./scripts/zepto.js"></script>
+    <script type="application/javascript" src="./scripts/deparam.js"></script>
     <script type="application/javascript" src="./scripts/index.js"></script>
     <link rel="stylesheet" type="text/css" href="./index.css">
   </head>
