--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="application/javascript" src="./scripts/moment.js"></script>
-    <script type="application/javascript" src="./scripts/zepto.js"></script>
-    <script type="application/javascript" src="./scripts/deparam.js"></script>
-    <script type="application/javascript" src="./scripts/index.js"></script>
+    <script type="application/javascript" src="./moment.js"></script>
+    <script type="application/javascript" src="./zepto.js"></script>
+    <script type="application/javascript" src="./index.js"></script>
     <link rel="stylesheet" type="text/css" href="./index.css">
   </head>
   <body>
